[MAKE] Updating build dependencies for Linux
Modifications are done for making appropriate symbolic links
to the generated library in the install directory along with
required interface headers. Also added are automake dependencies.

Change-Id: Ie8ec19c4b92fe730d7f29710417d66c7137871f4
Signed-off-by: Pradeep Venkatasubbarao <pradeepv@ti.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,12 +18,24 @@ libbltsville_hw2d_la_CFLAGS  = -fPIC -Wno-pointer-to-int-cast -DBUILDOS_LINUX=1\
                                 -Igcbv/mirror/ \
                                 -Igcbv/
 
-libbltsville_hw2d_la_LDFLAGS = -lpthread -no-undefined -version-info 1:0:0
+libbltsville_hw2d_la_LDFLAGS = -lpthread -lrt -no-undefined -version-info 1:0:0
 libbltsville_hw2d_la_LIBADD  =
 
 libbltsville_hw2d_la_includedir = $(includedir)/bltsville
-libbltsville_hw2d_la_include_HEADERS = bltsville/include/bltsville.h
+libbltsville_hw2d_la_include_HEADERS = bltsville/include/bvblend.h \
+                                        bltsville/include/bltsville.h \
+                                        bltsville/include/bvbuffdesc.h \
+                                        bltsville/include/bvcache.h \
+                                        bltsville/include/bventry.h \
+                                        bltsville/include/bverror.h \
+                                        bltsville/include/bvfilter.h \
+                                        bltsville/include/bvsurfgeom.h \
+                                        ocd/include/ocd.h
 
 pkgconfig_DATA               = libbltsville_hw2d.pc
 pkgconfigdir                 = $(libdir)/pkgconfig
+
+install-exec-hook:
+	cd $(DESTDIR)$(libdir) && \
+          $(LN_S) libbltsville_hw2d.so.$(VERSION) libbltsville_2d.so
 
