--- a/configure.ac
+++ b/configure.ac
@@ -54,7 +54,7 @@ AC_CHECK_HEADERS([string.h])
 AC_CHECK_HEADERS([sys/ioctl.h])
 AC_CHECK_HEADERS([unistd.h])
 AC_C_INLINE
-AC_FUNC_MALLOC
+#AC_FUNC_MALLOC
 AC_HEADER_STDBOOL
 AC_TYPE_INT64_T
 AC_TYPE_PID_T
